--- a/ejemplo.html
+++ b/ejemplo.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -30,7 +30,7 @@
 
         <!-- Pie de pagina -->
         <footer>
-                (c) Aspectos Juridicos			
+                (c) Evolucion y Mantenimiento Software	
         </footer>
 
 
