--- a/ejemplo.html
+++ b/ejemplo.html
@@ -19,7 +19,35 @@
         <!-- Contenido -->
         <section>  
 			<b>Libros</b>
-            <p>(Contenido)</p>
+            <section>  
+			<b>Libros</b>
+            <div>
+                <div class = "libro">
+                    <div class = "img">
+                        <img src="https://imagessl6.casadellibro.com/a/l/t3/96/9788490663196.jpg" alt="">
+                    </div>
+                    <div class="desc">
+                        <p>PATRIA<br>FERNANDO ARAMBURU</p>
+                    </div>
+                </div>
+                <div class = "libro">
+                    <div class = "img">
+                        <img src="https://imagessl4.casadellibro.com/a/l/t3/24/9788425354724.jpg" alt="">
+                    </div>
+                    <div class="desc">
+                        <p>LO QUE TE DIRE CUANDO TE VUELVA A VER<br>ALBERT ESPINOSA</p>
+                    </div>
+                </div>
+                <div class = "libro">
+                    <div class = "img">
+                        <img src="https://imagessl2.casadellibro.com/a/l/t3/02/9788494398902.jpg" alt="">
+                    </div>
+                    <div class="desc">
+                        <p>CASI SIN QUERER<br>DEFREDS JOSE. A. GOMEZ IGLESIAS</p>
+                    </div>
+                </div>
+            </div>
+		</section>
 		</section> 
 		
         <section>  
